--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "displayName": "premake manager",
   "description": "a extension to manage premake projects",
   "version": "0.0.1",
+  "type": "module",
   "engines": {
     "vscode": "^1.96.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": ["onStartupFinished"],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -25,6 +28,11 @@
           "type": "string",
           "default": "latest",
           "description": "Choose the version of Premake to use for this project."
+        },
+        "premake.repository": {
+          "type": "string",
+          "default": "https://github.com/premake/premake-core",
+          "description": "the url from wich to get the premake versions from."
         }
       }
     }
@@ -48,6 +56,8 @@
     "@typescript-eslint/parser": "^8.7.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
+    "axios": "^1.7.9",
+    "chokidar": "^4.0.3",
     "eslint": "^9.13.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
@@ -55,6 +65,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "chokidar": "^4.0.3"
+    "@octokit/core": "^6.1.2",
+    "@octokit/rest": "^21.0.2",
+    "@octokit/types": "^13.6.2"
   }
 }
