--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@microsoft/vscode-file-downloader-api": "^1.0.1",
     "@octokit/core": "^6.1.2",
     "@octokit/rest": "^21.0.2",
     "@octokit/types": "^13.6.2",
