--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
@@ -44,39 +44,34 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p tsconfig.extension.json",
+    "watch": "npm run compile && tsc -watch -p tsconfig.extension.json",
+    "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "tsc:w": "node --version",
+    "clean": "rimraf out"
+  },
+  "dependencies": {
+    "@octokit/rest": "^21.0.2",
+    "adm-zip": "^0.5.16",
+    "chokidar": "^4.0.3",
+    "tar": "^7.4.3"
   },
   "devDependencies": {
+    "@octokit/types": "^13.6.2",
+    "@types/adm-zip": "^0.5.7",
     "@types/mocha": "^10.0.9",
-    "@types/node": "20.x",
+    "@types/node": "^20.9.0",
     "@types/vscode": "^1.96.0",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.7.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
-    "axios": "^1.7.9",
-    "chokidar": "^4.0.3",
+    "@vscode/vsce": "^3.2.1",
     "eslint": "^9.13.0",
-    "ts-loader": "^9.5.1",
-    "tsconfig-paths-webpack-plugin": "^4.2.0",
-    "typescript": "^5.6.3",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "@microsoft/vscode-file-downloader-api": "^1.0.1",
-    "@octokit/core": "^6.1.2",
-    "@octokit/rest": "^21.0.2",
-    "@octokit/types": "^13.6.2",
-    "extract-zip": "^2.0.1",
-    "tar": "^7.4.3"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.7.2"
   }
 }
