--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "composite": true,
     "target": "ES2022",
     "lib": ["ES2022"],
@@ -9,8 +9,6 @@
     "rootDir": "src",
     "strict": true,
     "baseUrl": "./",
-    "allowImportingTsExtensions": true,
-    "emitDeclarationOnly": true,
-    "noEmit": false
+    "outDir": "out"
   }
 }
