--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@octokit/rest": "^21.0.2",
     "adm-zip": "^0.5.16",
+    "axios": "^1.7.9",
     "chokidar": "^4.0.3",
     "tar": "^7.4.3"
   },
