--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "rootDir": "src",
     "strict": true,
-    "baseUrl": "./",
-    "outDir": "out"
+    "baseUrl": "./src",
+    "outDir": "out",
   }
 }
