we have a basic view provider for premake5 files

--- a/package.json
+++ b/package.json
@@ -28,6 +28,23 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "workspaces", 
+          "title": "Workspaces", 
+          "icon": "resources/premake-sidebar-logo.svg" 
+        } 
+      ] 
+    }, 
+    "views": {
+      "workspaces": [
+        {
+          "id": "workspacesList",
+          "name": "Workspaces List" 
+        } 
+      ] 
+    },
     "commands": [
       {
         "category": "Premake",
