--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         {
           "id": "workspaces", 
           "title": "Workspaces", 
-          "icon": "resources/premake-sidebar-logo.svg" 
+          "icon": "resources/media/premake-logo-simple.png" 
         } 
       ] 
     }, 
